--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "@tanstack/react-query": "^5.75.7",
+    "axios": "^1.9.0",
     "firebase": "^11.7.1",
     "react": "^19.1.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.56.3",
+    "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.6"
   },
