--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
     "firebase": "^11.7.1",
-    "jodit": "^4.6.2",
+    "jodit-react": "^5.2.19",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
     "react-dom": "^19.1.0",
