--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
     "firebase": "^11.7.1",
+    "html-react-parser": "^5.2.5",
     "jodit-react": "^5.2.19",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
@@ -21,6 +22,7 @@
     "react-hook-form": "^7.56.3",
     "react-hot-toast": "^2.5.2",
     "react-router-dom": "^7.6.0",
+    "react-spinners": "^0.17.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
