--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-photo-view": "^1.2.7",
     "react-router-dom": "^7.6.0",
     "react-spinners": "^0.17.0",
+    "sweetalert2": "^11.21.0",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
