--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query": "^5.75.7",
     "axios": "^1.9.0",
     "firebase": "^11.7.1",
+    "hamburger-react": "^2.5.2",
     "html-react-parser": "^5.2.5",
     "jodit-react": "^5.2.19",
     "react": "^19.1.0",
@@ -26,6 +27,7 @@
     "react-router-dom": "^7.6.0",
     "react-spinners": "^0.17.0",
     "sweetalert2": "^11.21.0",
+    "swiper": "^11.2.6",
     "tailwindcss": "^4.1.6"
   },
   "devDependencies": {
